[package]
name = "urcu-sys"
version = "0.0.4"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
edition = "2018"
license = "LGPL-2.1"
description = "System bindings for urcu (user-space rcu)"
readme = "README.md"
keywords = ["rcu", "parallel", "read-copy-update", "linux"]
categories = ["algorithms", "concurrency", "data-structures", "os"]
links = "urcu"
repository = "https://github.com/gz/urcu-sys"

[package.metadata.pkg-config]
liburcu = "0.10"
liburcu-cds = "0.10"

[build-dependencies]
bindgen = "0.51"
metadeps = "1.1.2"